...
@Preview(
    uiMode = Configuration.UI_MODE_NIGHT_NO,
    name = "Light Mode")
@Composable
fun PreviewFactionsChipGroup(){
    val factions = mapOf(
        "Straw Hat Pirates" to 0xFF0000FF,
        "Silver Fox Pirates" to 0xff949494,
        "World Government" to 0xffa4ffa4,)
    CharTrackerTheme {
        Surface {
            FactionsChipGroup(
                header = "Factions:",
                contentsList = factions,
                selectedList = listOf(),
...
